*SVN*

* Added proper handling of arrays #8537 [hasmanyjosh]

  Before:
    Hash.from_xml '<images></images>'
    # => {:images => nil}

    Hash.from_xml '<images><image>foo.jpg</image></images>'
    # => {:images => {:image => "foo.jpg"}}

    Hash.from_xml '<images><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => {:image => ["foo.jpg", "bar.jpg"]}}

  After:
    Hash.from_xml '<images type="array"></images>'
    # => {:images => []}

    Hash.from_xml '<images type="array"><image>foo.jpg</image></images>'
    # => {:images => ["foo.jpg"]}

    Hash.from_xml '<images type="array"><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => ["foo.jpg", "bar.jpg"]}


* Move common DateTime calculations to Date.  #8536 [Geoff Buesing]

* Added Date#change (like Time#change) [DHH]

* DateTime#to_time converts to Time unless out of range.  #8512 [Geoff Buesing]

* Date#to_datetime, #to_s(:rfc822).  #8512 [Geoff Buesing]

* Time durations use since instead of + for accuracy.  #8513 [Geoff Buesing]

* escape <'s and >'s in JSON strings. #8371 [Rick]

* Inflections: MatrixTest -> MatrixTests instead of MatricesTest.  #8496 [jbwiv]

* Multibyte strings respond_to the String methods they proxy so they can be duck-typed.  #6549 [Tuxie]

* Array#to_xml yields the builder just like Hash and ActiveRecord::Base.  #8472 [seth]

* Date, Time, and DateTime support formatting blocks in addition to strftime strings. Introduce :long_ordinal format, e.g. "February 21st, 2005".  #8191 [Coda Hale]

* Document Object#blank?.  #6491 [Chris Mear]

* Date, Time, and DateTime#to_json.  #8399 [wycats]

* Simplify API of assert_difference by passing in an expression that is evaluated before and after the passed in block. See documenation for examples of new API. [Marcel Molina Jr.]

* Added assert_difference and assert_no_difference to test/unit assertions [Tobias Luetke]
